# WS2024-CGRMR-OpenGL

./: .gitignore  CMakeLists.txt  README.md
WORKING_Opengl/: OpenGL_Setup.cpp  WORKING_Opengl.sln  WORKING_Opengl.vcxproj  WORKING_Opengl.vcxproj.filters
WORKING_Opengl/enc_temp_folder/f417d67bc26cdc5433bf89e849f6f948/: OpenGL_Setup.cpp
assets/shaders/: fragmentShader.fs  vertexShader.vs
include/: Shader.h
src/: main.cpp
